Thu May 12 22:01:10 UTC 2022
a/kernel-generic-5.17.7-x86_64-1.txz:  Upgraded.
a/kernel-huge-5.17.7-x86_64-1.txz:  Upgraded.
a/kernel-modules-5.17.7-x86_64-1.txz:  Upgraded.
d/kernel-headers-5.17.7-x86-1.txz:  Upgraded.
k/kernel-source-5.17.7-noarch-1.txz:  Upgraded.
kde/akonadi-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadi-calendar-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadi-calendar-tools-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadi-contacts-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadi-import-wizard-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadi-mime-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadi-notes-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadi-search-22.04.1-x86_64-1.txz:  Upgraded.
kde/akonadiconsole-22.04.1-x86_64-1.txz:  Upgraded.
kde/akregator-22.04.1-x86_64-1.txz:  Upgraded.
kde/analitza-22.04.1-x86_64-1.txz:  Upgraded.
kde/ark-22.04.1-x86_64-1.txz:  Upgraded.
kde/artikulate-22.04.1-x86_64-1.txz:  Upgraded.
kde/audiocd-kio-22.04.1-x86_64-1.txz:  Upgraded.
kde/baloo-widgets-22.04.1-x86_64-1.txz:  Upgraded.
kde/blinken-22.04.1-x86_64-1.txz:  Upgraded.
kde/bomber-22.04.1-x86_64-1.txz:  Upgraded.
kde/bovo-22.04.1-x86_64-1.txz:  Upgraded.
kde/calendarsupport-22.04.1-x86_64-1.txz:  Upgraded.
kde/cantor-22.04.1-x86_64-1.txz:  Upgraded.
kde/cervisia-22.04.1-x86_64-1.txz:  Upgraded.
kde/dolphin-22.04.1-x86_64-1.txz:  Upgraded.
kde/dolphin-plugins-22.04.1-x86_64-1.txz:  Upgraded.
kde/dragon-22.04.1-x86_64-1.txz:  Upgraded.
kde/elisa-22.04.1-x86_64-1.txz:  Upgraded.
kde/eventviews-22.04.1-x86_64-1.txz:  Upgraded.
kde/falkon-22.04.1-x86_64-1.txz:  Upgraded.
kde/ffmpegthumbs-22.04.1-x86_64-1.txz:  Upgraded.
kde/filelight-22.04.1-x86_64-1.txz:  Upgraded.
kde/granatier-22.04.1-x86_64-1.txz:  Upgraded.
kde/grantlee-editor-22.04.1-x86_64-1.txz:  Upgraded.
kde/grantleetheme-22.04.1-x86_64-1.txz:  Upgraded.
kde/gwenview-22.04.1-x86_64-1.txz:  Upgraded.
kde/incidenceeditor-22.04.1-x86_64-1.txz:  Upgraded.
kde/itinerary-22.04.1-x86_64-1.txz:  Upgraded.