@@ -11,9 +11,23 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Thu, 12 May 2022 22:01:10 GMT</pubDate>
-      <lastBuildDate>Fri, 13 May 2022 04:59:46 GMT</lastBuildDate>
+      <pubDate>Fri, 13 May 2022 19:10:20 GMT</pubDate>
+      <lastBuildDate>Sat, 14 May 2022 04:59:46 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.17</generator>
+      <item>
+         <title>Fri, 13 May 2022 19:10:20 GMT</title>
+         <pubDate>Fri, 13 May 2022 19:10:20 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20220513191020</link>
+         <guid isPermaLink="false">20220513191020</guid>
+         <description>
+           <![CDATA[<pre>
+a/tcsh-6.24.01-x86_64-1.txz:  Upgraded.
+n/gnutls-3.7.5-x86_64-1.txz:  Upgraded.
+extra/php80/php80-8.0.19-x86_64-1.txz:  Upgraded.
+extra/php81/php81-8.1.6-x86_64-1.txz:  Upgraded.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Thu, 12 May 2022 22:01:10 GMT</title>
          <pubDate>Thu, 12 May 2022 22:01:10 GMT</pubDate>
