@@ -1,20 +1,20 @@
-Thu May 12 22:07:40 UTC 2022
+Fri May 13 19:13:40 UTC 2022
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2022-05-12 22:01 .
+drwxr-xr-x 12 root root      4096 2022-05-13 19:10 .
 -rw-r--r--  1 root root      5767 2022-02-02 22:44 ./ANNOUNCE.15.0
 -rw-r--r--  1 root root     16617 2022-02-02 23:27 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1105087 2022-05-11 19:08 ./CHECKSUMS.md5
--rw-r--r--  1 root root       163 2022-05-11 19:08 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1105087 2022-05-12 22:07 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2022-05-12 22:07 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root    139213 2022-05-12 22:01 ./ChangeLog.txt
+-rw-r--r--  1 root root    139450 2022-05-13 19:10 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2022-05-12 22:00 ./EFI/BOOT
 -rw-r--r--  1 root root   1187840 2021-06-15 19:16 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2022-05-12 22:00 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1438659 2022-05-11 19:08 ./FILELIST.TXT
+-rw-r--r--  1 root root   1438659 2022-05-12 22:07 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    872158 2022-05-12 22:07 ./PACKAGES.TXT
+-rw-r--r--  1 root root    872158 2022-05-13 19:13 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8034 2022-02-02 03:36 ./README.TXT
 -rw-r--r--  1 root root      3629 2022-05-12 21:46 ./README.initrd
 -rw-r--r--  1 root root     34162 2022-01-30 20:35 ./README_CRYPT.TXT
@@ -39,12 +39,12 @@ drwxr-xr-x  2 root root      4096 2022-05-12 22:00 ./EFI/BOOT
 -rw-r--r--  1 root root     17294 2008-12-08 18:13 ./SPEAK_INSTALL.TXT
 -rw-r--r--  1 root root     57187 2022-02-01 19:37 ./Slackware-HOWTO
 -rw-r--r--  1 root root      8700 2022-01-26 05:44 ./UPGRADE.TXT
-drwxr-xr-x 19 root root      4096 2022-04-15 20:03 ./extra
--rw-r--r--  1 root root     49604 2022-04-15 20:03 ./extra/CHECKSUMS.md5
--rw-r--r--  1 root root       163 2022-04-15 20:03 ./extra/CHECKSUMS.md5.asc
--rw-r--r--  1 root root     62474 2022-04-15 20:03 ./extra/FILE_LIST
--rw-r--r--  1 root root   1698375 2022-04-15 20:03 ./extra/MANIFEST.bz2
--rw-r--r--  1 root root     36505 2022-04-15 20:03 ./extra/PACKAGES.TXT
+drwxr-xr-x 19 root root      4096 2022-05-13 19:12 ./extra
+-rw-r--r--  1 root root     49604 2022-05-13 19:12 ./extra/CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2022-05-13 19:12 ./extra/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root     62474 2022-05-13 19:12 ./extra/FILE_LIST
+-rw-r--r--  1 root root   1701332 2022-05-13 19:12 ./extra/MANIFEST.bz2
+-rw-r--r--  1 root root     36505 2022-05-13 19:12 ./extra/PACKAGES.TXT
 -rw-r--r--  1 root root       149 2002-02-09 00:18 ./extra/README.TXT
 drwxr-xr-x  2 root root     20480 2020-05-26 20:38 ./extra/aspell-word-lists
 -rw-r--r--  1 root root       171 2016-06-06 20:10 ./extra/aspell-word-lists/aspell-af-0.50_0-x86_64-5.txt
@@ -348,14 +348,14 @@ drwxr-xr-x  2 root root      4096 2018-02-27 06:13 ./extra/google-chrome
 -rwxr-xr-x  1 root root      4168 2019-09-18 22:18 ./extra/google-chrome/google-chrome.SlackBuild
 -rw-r--r--  1 root root       840 2018-02-27 06:13 ./extra/google-chrome/slack-desc
 lrwxrwxrwx  1 root root        11 2012-07-30 20:41 ./extra/java -> source/java
-drwxr-xr-x  2 root root      4096 2022-04-15 20:03 ./extra/php80
--rw-r--r--  1 root root       369 2022-04-15 19:25 ./extra/php80/php80-8.0.18-x86_64-1.txt
--rw-r--r--  1 root root   6163764 2022-04-15 19:25 ./extra/php80/php80-8.0.18-x86_64-1.txz
--rw-r--r--  1 root root       163 2022-04-15 19:25 ./extra/php80/php80-8.0.18-x86_64-1.txz.asc
-drwxr-xr-x  2 root root      4096 2022-04-14 21:20 ./extra/php81
--rw-r--r--  1 root root       369 2022-04-14 19:53 ./extra/php81/php81-8.1.5-x86_64-1.txt
--rw-r--r--  1 root root   6281880 2022-04-14 19:53 ./extra/php81/php81-8.1.5-x86_64-1.txz
--rw-r--r--  1 root root       163 2022-04-14 19:53 ./extra/php81/php81-8.1.5-x86_64-1.txz.asc
+drwxr-xr-x  2 root root      4096 2022-05-13 19:12 ./extra/php80
+-rw-r--r--  1 root root       369 2022-05-13 18:21 ./extra/php80/php80-8.0.19-x86_64-1.txt
+-rw-r--r--  1 root root   6173308 2022-05-13 18:21 ./extra/php80/php80-8.0.19-x86_64-1.txz
+-rw-r--r--  1 root root       163 2022-05-13 18:21 ./extra/php80/php80-8.0.19-x86_64-1.txz.asc
+drwxr-xr-x  2 root root      4096 2022-05-13 19:12 ./extra/php81
+-rw-r--r--  1 root root       369 2022-05-13 18:34 ./extra/php81/php81-8.1.6-x86_64-1.txt
+-rw-r--r--  1 root root   6268760 2022-05-13 18:34 ./extra/php81/php81-8.1.6-x86_64-1.txz
+-rw-r--r--  1 root root       163 2022-05-13 18:34 ./extra/php81/php81-8.1.6-x86_64-1.txz.asc
 drwxr-xr-x  2 root root      4096 2022-02-10 01:53 ./extra/rust-for-mozilla
 -rw-r--r--  1 root root       700 2022-01-27 20:31 ./extra/rust-for-mozilla/README
 -rw-r--r--  1 root root       426 2022-02-08 22:14 ./extra/rust-for-mozilla/rust-1.57.0-x86_64-1.txt
@@ -566,23 +566,23 @@ drwxr-xr-x  2 root root      4096 2012-07-30 18:44 ./extra/source/java/profile.d
 -rwxr-xr-x  1 root root        80 2019-07-30 16:57 ./extra/source/java/profile.d/jre.sh
 -rw-r--r--  1 root root       817 2018-02-27 06:13 ./extra/source/java/slack-desc.jdk
 -rw-r--r--  1 root root       861 2018-02-27 06:13 ./extra/source/java/slack-desc.jre
-drwxr-xr-x  2 root root      4096 2022-04-15 19:23 ./extra/source/php80
+drwxr-xr-x  2 root root      4096 2022-05-13 18:19 ./extra/source/php80
 -rw-r--r--  1 root root       432 2020-12-21 16:28 ./extra/source/php80/doinst.sh.gz
--rwxr-xr-x  1 root root       120 2022-04-15 19:22 ./extra/source/php80/fetch-php.sh
+-rwxr-xr-x  1 root root       120 2022-05-13 18:19 ./extra/source/php80/fetch-php.sh
 -rw-r--r--  1 root root      1020 2021-02-19 20:43 ./extra/source/php80/mod_php.conf.example
--rw-r--r--  1 root root  10871224 2022-04-14 08:30 ./extra/source/php80/php-8.0.18.tar.xz
--rw-r--r--  1 root root       858 2022-04-14 08:30 ./extra/source/php80/php-8.0.18.tar.xz.asc
+-rw-r--r--  1 root root  10778992 2022-05-11 01:30 ./extra/source/php80/php-8.0.19.tar.xz
+-rw-r--r--  1 root root       866 2022-05-11 01:30 ./extra/source/php80/php-8.0.19.tar.xz.asc
 -rw-r--r--  1 root root       387 2017-11-28 02:08 ./extra/source/php80/php-fpm.conf.diff.gz
 -rw-r--r--  1 root root       605 2020-03-17 21:22 ./extra/source/php80/php.imap.api.diff.gz
 -rw-r--r--  1 root root       805 2020-05-12 19:14 ./extra/source/php80/php.ini-development.diff.gz
 -rwxr-xr-x  1 root root     10632 2022-04-15 19:22 ./extra/source/php80/php80.SlackBuild
 -rw-r--r--  1 root root       822 2021-12-03 05:20 ./extra/source/php80/slack-desc
-drwxr-xr-x  2 root root      4096 2022-04-14 19:50 ./extra/source/php81
+drwxr-xr-x  2 root root      4096 2022-05-13 18:20 ./extra/source/php81
 -rw-r--r--  1 root root       432 2020-12-21 16:28 ./extra/source/php81/doinst.sh.gz
--rwxr-xr-x  1 root root       118 2022-04-14 19:49 ./extra/source/php81/fetch-php.sh
+-rwxr-xr-x  1 root root       118 2022-05-13 18:20 ./extra/source/php81/fetch-php.sh
 -rw-r--r--  1 root root      1020 2021-02-19 20:43 ./extra/source/php81/mod_php.conf.example
--rw-r--r--  1 root root  11752684 2022-04-12 17:00 ./extra/source/php81/php-8.1.5.tar.xz
--rw-r--r--  1 root root       833 2022-04-12 17:00 ./extra/source/php81/php-8.1.5.tar.xz.asc
+-rw-r--r--  1 root root  11708824 2022-05-11 01:30 ./extra/source/php81/php-8.1.6.tar.xz
+-rw-r--r--  1 root root       833 2022-05-11 01:30 ./extra/source/php81/php-8.1.6.tar.xz.asc
 -rw-r--r--  1 root root       387 2017-11-28 02:08 ./extra/source/php81/php-fpm.conf.diff.gz
 -rw-r--r--  1 root root       605 2020-03-17 21:22 ./extra/source/php81/php.imap.api.diff.gz
 -rw-r--r--  1 root root       806 2021-11-29 19:09 ./extra/source/php81/php.ini-development.diff.gz
@@ -744,13 +744,13 @@ drwxr-xr-x  2 root root      4096 2022-02-03 07:02 ./patches
 -rw-r--r--  1 root root       575 2022-02-03 07:02 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2022-02-03 07:02 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2022-02-03 07:02 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2022-05-12 22:07 ./slackware64
--rw-r--r--  1 root root    339840 2022-05-12 22:07 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       163 2022-05-12 22:07 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    421400 2022-05-12 22:05 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4259617 2022-05-12 22:06 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2022-05-13 19:13 ./slackware64
+-rw-r--r--  1 root root    339840 2022-05-13 19:13 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2022-05-13 19:13 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    421400 2022-05-13 19:12 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4261899 2022-05-13 19:12 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
-drwxr-xr-x  2 root root     32768 2022-05-12 22:04 ./slackware64/a
+drwxr-xr-x  2 root root     32768 2022-05-13 19:12 ./slackware64/a
 -rw-r--r--  1 root root       327 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txt
 -rw-r--r--  1 root root     10720 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz
 -rw-r--r--  1 root root       163 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz.asc
@@ -1080,9 +1080,9 @@ drwxr-xr-x  2 root root     32768 2022-05-12 22:04 ./slackware64/a
 -rw-r--r--  1 root root       395 2021-02-15 20:32 ./slackware64/a/tar-1.34-x86_64-1.txt
 -rw-r--r--  1 root root    850976 2021-02-15 20:32 ./slackware64/a/tar-1.34-x86_64-1.txz
 -rw-r--r--  1 root root       163 2021-02-15 20:32 ./slackware64/a/tar-1.34-x86_64-1.txz.asc
--rw-r--r--  1 root root       431 2022-02-09 20:12 ./slackware64/a/tcsh-6.24.00-x86_64-1.txt
--rw-r--r--  1 root root    409540 2022-02-09 20:12 ./slackware64/a/tcsh-6.24.00-x86_64-1.txz
--rw-r--r--  1 root root       163 2022-02-09 20:12 ./slackware64/a/tcsh-6.24.00-x86_64-1.txz.asc
+-rw-r--r--  1 root root       431 2022-05-13 18:21 ./slackware64/a/tcsh-6.24.01-x86_64-1.txt
+-rw-r--r--  1 root root    409552 2022-05-13 18:21 ./slackware64/a/tcsh-6.24.01-x86_64-1.txz
+-rw-r--r--  1 root root       163 2022-05-13 18:21 ./slackware64/a/tcsh-6.24.01-x86_64-1.txz.asc
 -rw-r--r--  1 root root       432 2021-02-13 11:19 ./slackware64/a/time-1.9-x86_64-4.txt
 -rw-r--r--  1 root root     36624 2021-02-13 11:19 ./slackware64/a/time-1.9-x86_64-4.txz
 -rw-r--r--  1 root root       163 2021-02-13 11:19 ./slackware64/a/time-1.9-x86_64-4.txz.asc
@@ -3915,7 +3915,7 @@ drwxr-xr-x 2 root root    86016 2022-05-10 19:38 ./slackware64/l
 -rw-r--r-- 1 root root      463 2022-01-21 04:11 ./slackware64/l/zstd-1.5.2-x86_64-1.txt
 -rw-r--r-- 1 root root   437228 2022-01-21 04:11 ./slackware64/l/zstd-1.5.2-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-01-21 04:11 ./slackware64/l/zstd-1.5.2-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    36864 2022-05-12 22:05 ./slackware64/n
+drwxr-xr-x 2 root root    36864 2022-05-13 19:12 ./slackware64/n
 -rw-r--r-- 1 root root      357 2022-04-30 20:02 ./slackware64/n/ModemManager-1.18.8-x86_64-1.txt
 -rw-r--r-- 1 root root  2141932 2022-04-30 20:02 ./slackware64/n/ModemManager-1.18.8-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-04-30 20:02 ./slackware64/n/ModemManager-1.18.8-x86_64-1.txz.asc
@@ -4012,9 +4012,9 @@ drwxr-xr-x 2 root root    36864 2022-05-12 22:05 ./slackware64/n
 -rw-r--r-- 1 root root      598 2022-04-26 17:51 ./slackware64/n/gnupg2-2.2.35-x86_64-1.txt
 -rw-r--r-- 1 root root  2369456 2022-04-26 17:51 ./slackware64/n/gnupg2-2.2.35-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-04-26 17:51 ./slackware64/n/gnupg2-2.2.35-x86_64-1.txz.asc
--rw-r--r-- 1 root root      492 2022-03-18 19:22 ./slackware64/n/gnutls-3.7.4-x86_64-1.txt
--rw-r--r-- 1 root root  2823808 2022-03-18 19:22 ./slackware64/n/gnutls-3.7.4-x86_64-1.txz
--rw-r--r-- 1 root root      163 2022-03-18 19:22 ./slackware64/n/gnutls-3.7.4-x86_64-1.txz.asc
+-rw-r--r-- 1 root root      492 2022-05-13 17:16 ./slackware64/n/gnutls-3.7.5-x86_64-1.txt
+-rw-r--r-- 1 root root  2827072 2022-05-13 17:16 ./slackware64/n/gnutls-3.7.5-x86_64-1.txz
+-rw-r--r-- 1 root root      163 2022-05-13 17:16 ./slackware64/n/gnutls-3.7.5-x86_64-1.txz.asc
 -rw-r--r-- 1 root root      286 2021-02-13 12:04 ./slackware64/n/gpa-0.10.0-x86_64-3.txt
 -rw-r--r-- 1 root root   304520 2021-02-13 12:04 ./slackware64/n/gpa-0.10.0-x86_64-3.txz
 -rw-r--r-- 1 root root      163 2021-02-13 12:04 ./slackware64/n/gpa-0.10.0-x86_64-3.txz.asc
@@ -5643,11 +5643,11 @@ drwxr-xr-x   2 root root      4096 2021-02-15 19:33 ./slackware64/y
 -rw-r--r--   1 root root   1486956 2021-02-13 13:56 ./slackware64/y/nethack-3.6.6-x86_64-3.txz
 -rw-r--r--   1 root root       163 2021-02-13 13:56 ./slackware64/y/nethack-3.6.6-x86_64-3.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2022-05-12 22:07 ./source
--rw-r--r--   1 root root    587473 2022-05-12 22:07 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       163 2022-05-12 22:07 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    817912 2022-05-12 22:07 ./source/FILE_LIST
--rw-r--r--   1 root root  23673444 2022-05-12 22:07 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2022-05-13 19:13 ./source
+-rw-r--r--   1 root root    587473 2022-05-13 19:13 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       163 2022-05-13 19:13 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    817912 2022-05-13 19:13 ./source/FILE_LIST
+-rw-r--r--   1 root root  23662450 2022-05-13 19:13 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root       828 2022-02-02 04:43 ./source/README.TXT
 drwxr-xr-x 122 root root      4096 2022-04-30 19:56 ./source/a
 -rw-r--r--   1 root root       111 2022-02-07 20:58 ./source/a/FTBFSlog
@@ -6617,10 +6617,10 @@ drwxr-xr-x   2 root root      4096 2021-02-15 20:30 ./source/a/tar
 -rw-r--r--   1 root root       181 2021-02-13 11:33 ./source/a/tar/tar-1.34.tar.xz.sig
 -rwxr-xr-x   1 root root      5360 2021-02-15 20:30 ./source/a/tar/tar.SlackBuild
 -rw-r--r--   1 root root       564 2018-09-06 21:52 ./source/a/tar/tar.nolonezero.diff.gz
-drwxr-xr-x   2 root root      4096 2022-02-09 20:12 ./source/a/tcsh
+drwxr-xr-x   2 root root      4096 2022-05-13 18:21 ./source/a/tcsh
 -rw-r--r--   1 root root       105 2015-11-07 18:20 ./source/a/tcsh/doinst.sh.gz
 -rw-r--r--   1 root root       883 2018-02-27 06:13 ./source/a/tcsh/slack-desc
--rw-r--r--   1 root root    701981 2022-02-02 10:59 ./source/a/tcsh/tcsh-6.24.00.tar.lz
+-rw-r--r--   1 root root    702041 2022-05-12 14:26 ./source/a/tcsh/tcsh-6.24.01.tar.lz
 -rwxr-xr-x   1 root root      3836 2022-01-07 05:47 ./source/a/tcsh/tcsh.SlackBuild
 -rw-r--r--   1 root root        65 2019-12-02 20:47 ./source/a/tcsh/tcsh.url
 drwxr-xr-x   2 root root      4096 2021-02-13 05:31 ./source/a/time
@@ -12139,10 +12139,10 @@ drwxr-xr-x  2 root root      4096 2022-04-26 17:50 ./source/n/gnupg2
 -rw-r--r--  1 root root   5159811 2022-04-25 17:06 ./source/n/gnupg2/gnupg-2.2.35.tar.lz
 -rwxr-xr-x  1 root root      4251 2022-04-26 17:50 ./source/n/gnupg2/gnupg2.SlackBuild
 -rw-r--r--  1 root root      1052 2018-08-27 17:38 ./source/n/gnupg2/slack-desc
-drwxr-xr-x  2 root root      4096 2022-03-18 19:20 ./source/n/gnutls
--rw-r--r--  1 root root   6131772 2022-03-17 13:44 ./source/n/gnutls/gnutls-3.7.4.tar.xz
--rw-r--r--  1 root root       685 2022-03-17 13:44 ./source/n/gnutls/gnutls-3.7.4.tar.xz.sig
--rwxr-xr-x  1 root root      4933 2021-05-24 16:52 ./source/n/gnutls/gnutls.SlackBuild
+drwxr-xr-x  2 root root      4096 2022-05-13 17:09 ./source/n/gnutls
+-rw-r--r--  1 root root   6321392 2022-05-12 16:30 ./source/n/gnutls/gnutls-3.7.5.tar.xz
+-rw-r--r--  1 root root       685 2022-05-12 16:30 ./source/n/gnutls/gnutls-3.7.5.tar.xz.sig
+-rwxr-xr-x  1 root root      4982 2022-05-13 17:13 ./source/n/gnutls/gnutls.SlackBuild
 -rw-r--r--  1 root root       946 2018-02-27 06:13 ./source/n/gnutls/slack-desc
 drwxr-xr-x  2 root root      4096 2021-02-13 05:32 ./source/n/gpa
 -rw-r--r--  1 root root       232 2012-07-18 19:35 ./source/n/gpa/doinst.sh.gz
