@@ -1,2 +1,2 @@
-lftpget http://us.php.net/distributions/php-8.0.18.tar.xz.asc
-lftpget http://us.php.net/distributions/php-8.0.18.tar.xz
+lftpget http://us.php.net/distributions/php-8.0.19.tar.xz.asc
+lftpget http://us.php.net/distributions/php-8.0.19.tar.xz
