@@ -1,2 +1,2 @@
-lftpget http://us.php.net/distributions/php-8.1.5.tar.xz.asc
-lftpget http://us.php.net/distributions/php-8.1.5.tar.xz
+lftpget http://us.php.net/distributions/php-8.1.6.tar.xz.asc
+lftpget http://us.php.net/distributions/php-8.1.6.tar.xz
