@@ -97,6 +97,9 @@ CXXFLAGS="$SLKCFLAGS" \
   --enable-static=no \
   --disable-rpath \
   --with-included-libtasn1 \
+  --with-brotli \
+  --with-idn \
+  --with-zstd \
   --enable-openssl-compatibility \
   --build=$ARCH-slackware-linux \
   --host=$ARCH-slackware-linux || exit 1
