@@ -1,3 +1,9 @@
+Fri May 13 19:10:20 UTC 2022
+a/tcsh-6.24.01-x86_64-1.txz:  Upgraded.
+n/gnutls-3.7.5-x86_64-1.txz:  Upgraded.
+extra/php80/php80-8.0.19-x86_64-1.txz:  Upgraded.
+extra/php81/php81-8.1.6-x86_64-1.txz:  Upgraded.
++--------------------------+
 Thu May 12 22:01:10 UTC 2022
 a/kernel-generic-5.17.7-x86_64-1.txz:  Upgraded.
 a/kernel-huge-5.17.7-x86_64-1.txz:  Upgraded.
